# blr-societies

./: Cargo.toml  README.md  housing.csv  nobroker.csv  societies.csv
.github/workflows/: scrape-housing.yml  scrape-mygate.yml  scrape-nobroker.yml
data/: housing.csv  mygate.csv  nobroker.csv
src/: error.rs  main.rs
src/scrapers/: mod.rs
src/scrapers/nobroker/: mod.rs  schema.rs
tools/: scrape-housing.js  scrape-mygate.js  scrape-nobroker.js
