[package]
name = "blr-societies"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
regex = "1.11.1"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_path_to_error = "0.1.17"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
